[package]
name = "plonky2-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
plonky2 = { git = "https://github.com/chriscerie/plonky2.git", version = "0.1.4" }
plonky2_field = { git = "https://github.com/chriscerie/plonky2.git", version = "0.1.1" }
